<resources>
    <string name="app_name">ToiminnallisuusV1</string>
    <string name="ok">OK</string>
    <string name="takaisin">Takaisin</string>
    <string name="paino_kg">Paino (kg)</string>
    <string name="pituus_cm">Pituus (cm)</string>
    <string name="sukupuoli">Sukupuoli</string>
    <string name="ika">Ikä</string>
    <string name="sukunimi">Sukunimi</string>
    <string name="etunimi">Etunimi</string>
    <string name="kayttajanimi">Käyttäjänimi</string>
    <string name="uusikayttaja">Uusi käyttäjä</string>
    <string name="title_activity_vesi">VesiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maito">MaitoActivity</string>
    <string name="title_activity_ruoka_game">RuokaGameActivity</string>
    <string name="title_activity_liikunta_game">LiikuntaGameActivity</string>
</resources>
