<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChangeUserSettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="-120dp"
            android:onClick="toMainView"
            android:src="@drawable/logotext_src" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Asetukset"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/headerText" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/kohdistus"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="">
    </TextView>

    <EditText
        android:id="@+id/etunimiEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:layout_below="@+id/headerText"
        android:layout_toLeftOf="@id/kohdistus"
        android:textColorHint="@color/hintColor"
        android:hint="@string/etunimi"/>

    <EditText
        android:id="@+id/ikaEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:hint="@string/ika"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etunimiEditText"
        android:layout_toLeftOf="@id/kohdistus"
        android:gravity="center"
        android:textColorHint="@color/hintColor"
        android:inputType="date"/>

    <EditText
        android:id="@+id/pituusEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:hint="@string/pituus_cm"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:layout_below="@+id/ikaEditText"
        android:layout_toLeftOf="@id/kohdistus"
        android:textColorHint="@color/hintColor"
        android:inputType="number"/>

    <EditText
        android:id="@+id/DayCaloriesEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:hint="kaloritavoite"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:layout_below="@+id/pituusEditText"
        android:layout_toLeftOf="@+id/kohdistus"
        android:textColorHint="@color/hintColor"
        />

    <EditText
        android:id="@+id/sukunimiEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/sukunimi"
        android:gravity="center"
        android:layout_below="@+id/headerText"
        android:layout_toRightOf="@id/kohdistus"
        android:textColorHint="@color/hintColor"
        android:layout_gravity=""/>

    <Spinner
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/sukunimiEditText"
        android:layout_toRightOf="@id/kohdistus"
        android:id="@+id/spinner"/>

    <EditText
        android:id="@+id/painoEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/paino_kg"
        android:gravity="center"
        android:layout_below="@+id/spinner"
        android:layout_toRightOf="@id/kohdistus"
        android:textColorHint="@color/hintColor"
        android:layout_marginTop="20dp"/>



    <Button
        android:id="@+id/okButton"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/buttonshape0"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@+id/painoEditText"
        android:layout_toRightOf="@id/kohdistus"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:text="Tallenna"/>

</RelativeLayout>