<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewUserActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_src" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/palkki"
        android:layout_height="5dp"
        android:layout_below="@+id/imageView"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/kohdistus"
        android:layout_below="@+id/palkki"
        android:layout_centerHorizontal="true"
        android:text="">
    </TextView>

            <EditText
                android:id="@+id/kaloriEditText"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:layout_below="@+id/palkki"
                android:layout_toLeftOf="@id/kohdistus"
                android:inputType="number"
                android:textColorHint="@color/hintColor"
                android:hint="Kaloritavoite"/>

    <EditText
        android:id="@+id/urheiluEditText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:hint="Urheilutavoite"
        android:gravity="center"
        android:inputType="time"
        android:layout_below="@+id/palkki"
        android:layout_toRightOf="@id/kohdistus"
        android:textColorHint="@color/hintColor"/>

            <EditText
                android:id="@+id/ikaEditText"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:hint="@string/ika"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_below="@+id/kaloriEditText"
                android:layout_toLeftOf="@id/kohdistus"
                android:gravity="center"
                android:textColorHint="@color/hintColor"
                android:inputType="date"/>

            <EditText
                android:id="@+id/pituusEditText"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:hint="@string/pituus_cm"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:layout_below="@+id/ikaEditText"
                android:layout_toLeftOf="@id/kohdistus"
                android:textColorHint="@color/hintColor"
                android:inputType="number"/>

            <Spinner
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:autofillHints="Sukupuoli"
                android:layout_below="@+id/urheiluEditText"
                android:layout_toRightOf="@id/kohdistus"
                android:id="@+id/spinner"/>

            <EditText
                android:id="@+id/painoEditText"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/paino_kg"
                android:gravity="center"
                android:layout_below="@+id/spinner"
                android:layout_toRightOf="@id/kohdistus"
                android:textColorHint="@color/hintColor"
                android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/takaisinButton"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/buttonshape0"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_toLeftOf="@id/kohdistus"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:text="Edellinen"/>

    <Button
        android:id="@+id/okButton"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/buttonshape0"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_toRightOf="@id/kohdistus"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/ok"/>

</RelativeLayout>